--- a/exemplo05.html
+++ b/exemplo05.html
@@ -1,23 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Do-While</title>
+    <title>for</title>
 </head>
-
 <body>
     <script>
         var i, num;
 
-        num = parseInt(prompt("INforme um numero:"));
-
-        for(i = 0; i<num;i++) {
-            document.write(`i:${i}<br>`);
+        num = parseInt(prompt("Informe um número:"));
+        
+        for(i = 0; i < num; i++) {
+          document.write(`i: ${i} <br>`);
         }
     </script>
-
 </body>
-
 </html>
